# open-jp-dao

./: .gitignore  README.md
backend/server/: Makefile  README.md  log.py  main.py  pyproject.toml  sample.py  sample_dao.py  sample_erc20_votes_token.py  sample_tranc.py  sample_vote.py  sample_vote_flow1.py  sample_worker_nft.py
backend/server/abi/: ERC20VotesToken.json  EmployeeAuthorityWorkerNFT.json  OpenJpDaoGovernor.json
backend/server/bunsan/ethereum/: chains.py  ethereum.py
backend/server/bunsan/ethereum/eips/: i_erc20.py  i_erc20_metadata.py  (+2 more)
backend/server/decentralized/requests/: deployed_contracts.py  nft.py  nonce.py  verify.py
backend/server/decentralized/responses/: errors.py
backend/server/decentralized/usecase/: tokens.py
backend/server/decentralized/utils/: chains.py
backend/server/docs/: open_api.yaml
backend/server/routers/: sessions.py  votes.py
backend/server/scripts/: wait_launch_server.sh
backend/server/src/: main.py
backend/server/src/exceptions/: app_base_exception.py  invalid_chain_exception.py  invalid_format_address_exception.py  not_connected_exception.py  siwe_message_verify_exception.py  solana_verify_exception.py
backend/server/src/routers/: sessions.py  solana.py  votes.py
backend/server/tarvern/tests/: test_tokens.tavern.yaml
backend/server/tests/: test_main.py  test_sessions.py  test_solana.py
backend/server/tests/exceptions/: test_solana_verify_exception.py
backend/server/tests/tarvern/: test_ping.tavern.yaml
backend/server/tests/usecase/: test_tokens.py
backend/server/tests/utils/: test_account.py  test_chains.py
(+615 files in other folders)
