[tool.poetry]
name = "decentralized"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.7.0"
ruff = "^0.4.4"
black = "^24.4.2"
pytest = "^8.2.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
siwe = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# pythonpath = "decentralized"
testpaths = ["tests"]