[tool.poetry]
name = "decentralized"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.7.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
siwe = "^4.4.0"
solathon = "^1.0.7"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# pythonpath = "decentralized"
testpaths = ["tests"]